# Sentinel-backend

./: .dockerignore  .env.example  .gitignore  COMPOSIO_SETUP.md  Dockerfile  README.md  SECURITY_FIX_JWT.md  TEST_USERS.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_rbac_and_consent.py  003_add_workflow_tables.py  004_phase1_schema_foundation.py  005_create_invitations_table.py  006_drop_useridentity_role_manager_hash.py  007_add_chat_history_table.py
app/: config.py  main.py
app/api/: websocket.py
app/core/: database.py  logging_config.py  rate_limiter.py  redis_client.py  response.py  security.py  supabase.py  vault.py
app/integrations/: README.md  __init__.py  composio_client.py
app/middleware/: security.py  tenant_context.py
app/migrations/: __init__.py  migration_0001_manager_hash_to_team.py
app/models/: __init__.py  analytics.py  chat_history.py  identity.py  invitation.py  notification.py  team.py  tenant.py  workflow.py
app/schemas/: ai.py  auth.py  common.py  engines.py  team.py  tenant.py
app/services/: audit_service.py  chat_history_service.py  context.py  culture_temp.py  data_boundary.py  llm.py  (+20 more)
docs/: API.md
scripts/: debug_db_content.py  demo_seed.py  reset_demo.py  reset_passwords.py  seed_analytics.py  seed_auth_users.py  seed_demo.py  seed_fresh.py  seed_master.py  seed_rbac_test_users.py  seed_supabase.py  seed_supabase_auth.py  seed_tenant.py  seed_users.py  verify_encryption.py  verify_seed.py
tests/: conftest.py  test_me_endpoints.py  test_permissions.py  test_rbac.py  test_team_endpoints.py
(+44 files in other folders)
