[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "fastapi>=0.128.6",
    "litellm>=1.81.4",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "slack-sdk>=3.39.0",
    "sqlalchemy>=2.0.46",
    "supabase>=2.27.2",
    "uvicorn>=0.40.0",
]
