[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "composio>=0.11.4",
    "fastapi>=0.128.6",
    "pydantic-settings>=2.13.1",
    "portkey-ai>=1.0.0",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.22",
    "setuptools<=69.5.1",
    "slack-sdk>=3.39.0",
    "sqlalchemy>=2.0.46",
    "structlog>=25.5.0",
    "supabase>=2.27.2",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
